# RGB_Challenge

./: README.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.hpp
src/lib/: CMakeLists.txt  datagram.cpp  datagram.hpp  file_tools.cpp  file_tools.hpp
src/server/: CMakeLists.txt  server.cpp  server.hpp
